[project]
name = "frostfall-steam-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "FrstF4ll",email = "hydralixe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "frostfall"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
frostfall-steam = "frostfall.main:main"