[project]
name = "frostfall-steam-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "FrstF4ll",email = "hydralixe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "vdf (>=3.4,<4.0)",
    "requests (>=2.34.2,<3.0.0)",
    "keyring (>=25.7.0,<26.0.0)",
    "rich (>=15.0.0,<16.0.0)",
]

[tool.poetry]
packages = [{include = "frostfall"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
frostfall-steam = "frostfall.main:main"